# CPP

./: 2dmatrix.cpp  CheckProcessSystemBit.cpp  DLL.cpp  GDI+.cpp  KeyName2keyCode.cpp  KeyboardWatcher.cpp  OnlyOneInstanceOfApplcation.cpp  PressKEY_and_MOUSE.cpp  README.md  STL.cpp  return_auto_with_void.cpp  template_struct_with_static_func.cpp  variadic.cpp
Config_Parser/: Config.cpp  Config.h  README.md  main.cpp  main_new.cpp  settings.ini
DirectX_game_menu/_msvs2017/: botiq.sln  botiq.vcxproj  botiq.vcxproj.filters
DirectX_game_menu/app/: main.cpp
DirectX_game_menu/include/: DXD9.h  menu.h
DirectX_game_menu/source/: DXD9.cpp  menu.cpp
Operator_overloading/: Matrix.cpp  Matrix.h  main.cpp  test_dynamic_array.cpp
PlayMusicAndSounds/: PlayMusicAndSounds.rc  README.md  main.cpp  resource.h
ProcessMemory/: GetModule.cpp  GetProcessIdByName.cpp  ProcessOnFocus.cpp  ReadWrite.cpp
SFML/: main.cpp
Template_Application/: .gitignore  CMakeLists.txt  Makefile
Template_Application/.msvs2019/: GameTrainer.sln  (+1 more)
Templates-Separate_Compilation/: Elements.h  Elements.inc.h  main.cpp
WinApi_Application/: WinApp.cpp  WinApp.h  WinMain.cpp
console_menu_with_arrows/: main.cpp  menu.cpp  menu.hpp
lib/: .gitignore  CMakeLists.txt  Makefile
lib/app/: CMakeLists.txt
lib/app/inc/: printer.hpp  reader.hpp
lib/app/src/: main.cpp  printer.cpp  reader.cpp
lib/lib/: CMakeLists.txt
lib/lib/inc/: test1.hpp  test2.hpp
lib/lib/src/: test1.cpp  test2.cpp
lib_win/: .gitignore  CMakeLists.txt  Makefile
lib_win/app/inc/: printer.hpp
lib_win/app/src/: main.cpp  printer.cpp  reader.cpp
lib_win/lib/src/: test1.cpp  test2.cpp
lua/: README.md  main.cpp  script.lua
